# pandoc_markdown2docx_instuction

./: .gitignore  Reference_md.docx  ThinsToDo.md  example.docx  example.md  front.docx  instruction.md  latex.tex  menu - 副本.docx  menu.md  menu_.docx  menu_.md  menu__.md  pandoc_make.ps1  readme.md  reference.docx  test-latex.docx  test-latex.md  test-latex.tex  test.docx  test.md
Work/: 1.bib  code.py  example.md  pandoc_make.ps1
doc/: menu.docx  menu.md
filters/: README.md  pyproject.toml
filters/docx_filters/: __init__.py  __main__.py  equations_no.py  fieldCode.py  figures_no.py  header_convert.py  parse_md.py  refs.py  section_break.py  sugar_replace.py  texcommands.py  word_elements.py
lua/: docx-newsection.lua  docx-toc.lua  pagebreak.lua
reference/: Reference_md.docx  reference2.docx
功能验证/: ThinsToDo.md  ooxml.md  pandoc_make.ps1  test.docx  test.md  ~$test.docx  实现效果.md  技术细节.md
功能验证/test/: [Content_Types].xml
功能验证/test/_rels/: .rels
功能验证/test/docProps/: core.xml  custom.xml
功能验证/test/word/: document.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
功能验证/test/word/_rels/: document.xml.rels
开题答辩/: ooxml.md  refer.docx  test.docx  test.json  test.md  开题答辩.md  项目介绍.md
